--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -28,6 +30,6 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.8",
-    "vite": "^6.1.0"
+    "vite": "^6.2.2"
   }
 }
