--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@tailwindcss/vite": "^4.0.8",
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.4.0",
     "tw-elements": "^2.0.0"
   },
@@ -28,7 +29,7 @@
     "@eslint/js": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.8",
     "@testing-library/jest-dom": "^5.0.0",
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
