--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "portfolio",
+  "homepage": "https://Chea-Ilong.github.io/coppseries ",
+  "name": "coppseries",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist",
+    "start": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -39,6 +43,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "jest": "^27.0.0",
     "postcss": "^8.5.3",
